# astroMUGS

./: .gitignore  README.md  chemdisk-token.txt  pyproject.toml  setup.py
astromugs/: __init__.py
astromugs/constants/: constants.py
astromugs/modeling/: Disk.py  Envelope.py  InterstellarRadFields.py  Model.py  Star.py  Structure.py
astromugs/nautilus/: read.py  write.py
astromugs/nautilus/network/: gas_reactions.in
astromugs/plotting/: plot.py
astromugs/radmc3d/: write.py
astromugs/utils/: params.py
chemdiskpy.egg-info/: PKG-INFO  SOURCES.txt
chemdiskpy/modeling/: Disk.py  Envelope.py  Grid.py  Model.py  Structure.py
chemdiskpy/nautilus/: __init__.py  coupling.py  read.py
chemdiskpy/nautilus/network/: activation_energies.in
chemdiskpy/radmc3d/: read.py  run.py  write.py
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst  inputoutput.rst  install.rst  jupyterlite_config.json
docs/source/_static/: switcher.json
docs/source/user_guide/: basicuse.rst  index.md  install.rst  introduction.rst
docs_original/: requirements.txt
docs_original/source/: basicuse.rst  conf.py  convert.rst  index.rst  install.rst  introduction.rst
example_simulation/: parameters.py  plot.ipynb  run_model.ipynb
