[build-system]
requires = [
    "python > 3.10",
    "setuptools>=61",
    "wheel",
    "numpy"
]
build-backend = "setuptools.build_meta"


[project]
name = "chemdiskpy"
authors = [{name = "Sacha Gavino", email = "sacha.gavino@unibo.it"}]
dynamic = ["version", "description", "readme", "classifiers"]


[tool.setuptools.dynamic]
readme = {file = "README", content-type = "text/markdown"}
