[build-system]
requires = [
    "setuptools>=41",
    "wheel",
    "numpy"
]
build-backend = "setuptools.build_meta"


[project]
name = "chemdiskpy"
authors = [{name = "Sacha Gavino", email = "sacha.gavino@unibo.it"}]
dynamic = ["version", "description", "readme", "classifiers", "requires-python"]


[tool.setuptools.dynamic]
readme = {file = "README", content-type = "text/markdown"}
