[build-system]
requires = [
    "setuptools>=41",
    "wheel",
    "numpy"
]
build-backend = "setuptools.build_meta"


[project]
name = "astromugs"
authors = [{name = "Sacha Gavino", email = "sacha.gavino@unibo.it"}]
description = "A package to runs postprocessing of MUlti-Grain simulations." 
dynamic = ["version", "readme", "classifiers", "requires-python"]


[tool.setuptools.dynamic]
readme = {file = "README", content-type = "text/markdown"}
